--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
+# Python
 backend/venv/
 backend/.env
 backend/__pycache__/
 *.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.so
+.Python
+
+# Node
+node_modules/
 frontend/node_modules/
 dist/
 build/
 .env.local
+.env*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Railway
+.railway/
