Docker start command modified

--- a/backend/DockerFile
+++ b/backend/DockerFile
@@ -21,4 +21,4 @@ ENV PORT=8080
 ENV FLASK_APP=app.py
 
 # 8️⃣ Run gunicorn as entrypoint
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:$PORT", "app:app"]
+CMD gunicorn -w 4 -b 0.0.0.0:$PORT app:app
