Upgrade base image to Python 3.10 and optimize setup
Updated Dockerfile to use Python 3.10 and pre-download NLTK data.

--- a/backend/DockerFile
+++ b/backend/DockerFile
@@ -1,24 +1,18 @@
-# 1️⃣ Use a slim Python base
-FROM python:3.12-slim
+FROM python:3.10-slim-buster
 
-# 2️⃣ Set working directory
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
-# 3️⃣ Copy requirements first for caching
 COPY requirements.txt .
-
-# 4️⃣ Install CPU-only PyTorch first (smaller image)
-RUN pip install --no-cache-dir torch==2.5.1+cpu --index-url https://download.pytorch.org/whl/cpu
-
-# 5️⃣ Install the rest of the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 6️⃣ Copy the application code
 COPY . .
 
-# 7️⃣ Set environment variables for Flask
+# Pre-download NLTK data
+RUN python -m nltk.downloader punkt stopwords wordnet
+..
 ENV PORT=8080
-ENV FLASK_APP=app.py
 
-# 8️⃣ Run gunicorn as entrypoint
-CMD gunicorn -w 1 -b 0.0.0.0:$PORT app:app
+CMD exec gunicorn --bind :$PORT --workers 1 --timeout 0 flask_api:app
