--- a/backend/DockerFile
+++ b/backend/DockerFile
@@ -1,18 +1,27 @@
-FROM python:3.10-slim-buster
+# Use a lightweight Python base image
+FROM python:3.10-slim
 
+# Prevent Python from writing pyc files and buffering stdout
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Set working directory
 WORKDIR /app
 
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Download essential NLTK data
+RUN python -m nltk.downloader punkt stopwords wordnet
+
+# Copy the rest of the app
 COPY . .
 
-# Pre-download NLTK data
-RUN python -m nltk.downloader punkt stopwords wordnet
-..
+# Expose the port (Cloud Run defaults to 8080)
 ENV PORT=8080
 
+# Run with Gunicorn — 1 worker, no timeout (useful for model init)
 CMD exec gunicorn --bind :$PORT --workers 1 --timeout 0 flask_api:app
